tests/duarouter/errors/invalid_stops/options.duarouter
--net-file=input_net.net.xml --additional-files=input_additional.add.xml 
-o routes.xml
